Fixed mobile not showing all content

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -174,7 +174,7 @@
         }
 
         p {
-            font-size: 1rem !important;
+            font-size: .9rem !important;
         }
         
         .skills-icons-div {
